--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.0",
     "ajv": "^8.13.0",
     "ajv-keywords": "^5.1.0",
+    "mathjs": "^13.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
