--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.4.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.107",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "ajv": "^8.13.0",
     "ajv-keywords": "^5.1.0",
+    "d3": "^7.9.0",
     "mathjs": "^13.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
