added homepage link

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vteodorodev.github.io/signal_synth",
   "name": "signal_synth",
   "version": "0.1.0",
   "private": true,
