trying out different homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vteodorodev.github.io/signal_synth",
+  "homepage": "./",
   "name": "signal_synth",
   "version": "0.1.0",
   "private": true,
